fixed spacing

--- a/src/pages/Home/components/PropertyList/PropertyList.Module.scss
+++ b/src/pages/Home/components/PropertyList/PropertyList.Module.scss
@@ -4,7 +4,6 @@
   width: 100%;
   max-width: $breakpoint-xxl;
   margin: 0 auto;
-  padding: $spacing-lg;
 }
 
 .property-list {
@@ -14,7 +13,6 @@
 }
 
 .property-card {
-  transition: transform 0.3s ease, box-shadow 0.3s ease; // Smooth transitions
   position: relative;
   display: flex;
   flex-direction: column;
@@ -25,16 +23,12 @@
     overflow: hidden;
     border-radius: $border-radius-lg;
     box-shadow: $shadow-small;
+    margin: 0;
 
     img {
-      position: absolute;
-      top: 0;
-      left: 50%;
       width: 100%;
       height: 100%;
       object-fit: cover;
-      transform: translateX(-50%);
-      transition: transform 0.3s ease;
     }
   }
 
